Add revision-date, committers plugin. Add notes.

--- a/docs/blog/posts/2019-2022/2020-07-23.md
+++ b/docs/blog/posts/2019-2022/2020-07-23.md
@@ -1,8 +1,7 @@
 ---
 date: 2020-07-23
 authors: [linkchen]
-categories: [Embedded, IDE]
-tags: [Embedded, IDE]
+categories: [C/C++]
 comments: true
 ---
 
