--- a/docs/blog/posts/2019-2022/2020-09-08.md
+++ b/docs/blog/posts/2019-2022/2020-09-08.md
@@ -1,8 +1,7 @@
 ---
 date: 2020-09-08
 authors: [linkchen]
-categories: [Android, IDE]
-tags: [Android, IDE]
+categories: [Java]
 comments: true
 ---
 
