--- a/docs/blog/posts/2019-2022/2020-09-12.md
+++ b/docs/blog/posts/2019-2022/2020-09-12.md
@@ -1,8 +1,7 @@
 ---
 date: 2020-09-12
 authors: [linkchen]
-categories: [C/C++, Windows, IDE]
-tags: [C/C++, Windows, IDE]
+categories: [C/C++]
 comments: true
 ---
 
