--- a/docs/blog/posts/2019-2022/2022-02-06.md
+++ b/docs/blog/posts/2019-2022/2022-02-06.md
@@ -1,8 +1,7 @@
 ---
 date: 2022-02-06
 authors: [linkchen]
-categories: [Network, Linux]
-tags: [Network, Linux]
+categories: [Network]
 comments: true
 ---
 
