--- a/docs/blog/posts/2019-2022/2022-03-24.md
+++ b/docs/blog/posts/2019-2022/2022-03-24.md
@@ -1,8 +1,7 @@
 ---
 date: 2022-03-24
 authors: [linkchen]
-categories: [Windows]
-tags: [Office, Windows]
+categories: [Misc]
 comments: true
 ---
 
